[tool.poetry]
name = "p99pe5XYBfCuAWBK"
version = "0.1.0"
description = ""
authors = ["SRKPA <kpanou.rogia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
torch = "^2.2.1"
lightning = "^2.1.1"
loguru = "^0.7.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
